script src added

--- a/reg.html
+++ b/reg.html
@@ -43,7 +43,10 @@
           <input type="radio" id="dataDeny" name="dataDeny" value="deny" />
         </div>
       </fieldset>
+      <br />
+      <button type="submit">Submit</button>
     </form>
+    <script src="script.js"></script>
     <p>
       DATA PROTECTION NOTICE: Manifest Fellowship would like to hold and use the
       information you have provided in this form for the purposes set out below:
