--- a/reg.html
+++ b/reg.html
@@ -10,12 +10,15 @@
       <label for="fullName">Full Name:</label>
       <input type="text" id="fullName" name="fullName" required />
       <br />
+
       <label for="contactNumber">Contact Number:</label>
       <input type="tel" id="contactNumber" name="contactNumber" required />
       <br />
+
       <label for="homeArea">Place of Residence:</label>
       <input type="text" id="homeArea" name="homeArea" required />
       <br />
+
       <label for="learningInstituition">Institution of Learning:</label>
       <input
         type="text"
@@ -23,11 +26,13 @@
         name="learningInstituition"
       />
       <br />
-      <label for="fullName"
+
+      <label for="firstTime"
         >Is this your first time fellowshipping with us?</label
       >
-      <input type="text" id="fullName" name="fullName" required />
+      <input type="text" id="firstTime" name="firstTime" required />
       <br />
+
       <fieldset>
         <legend>Do you grant us consent to use your information?</legend>
         <div>
@@ -44,17 +49,27 @@
         </div>
       </fieldset>
       <br />
+
       <button type="submit">Submit</button>
     </form>
     <script src="script.js"></script>
     <p>
       DATA PROTECTION NOTICE: Manifest Fellowship would like to hold and use the
       information you have provided in this form for the purposes set out below:
-      1. To keep you informed of events, services and other related
-      communication from the ministry. 2. To share your contact details with our
-      teams for experience sharing with the ministry. 3. To use your
-      photograph(s) and video(s) taken during any of our events on our
-      communication materials.
     </p>
+    <ol>
+      <li>
+        To keep you informed of events, services and other related communication
+        from the ministry.
+      </li>
+      <li>
+        To share your contact details with our teams for experience sharing with
+        the ministry.
+      </li>
+      <li>
+        To use your photograph(s) and video(s) taken during any of our events on
+        our communication materials.
+      </li>
+    </ol>
   </body>
 </html>
