--- a/reg.html
+++ b/reg.html
@@ -34,12 +34,15 @@
           <input
             type="radio"
             id="dataAccept"
-            name="dataAccept"
+            name="consent"
             value="accept"
+            checked
           />
+        </div>
 
+        <div>
           <label for="dataDeny">Deny</label>
-          <input type="radio" id="dataDeny" name="dataDeny" value="deny" />
+          <input type="radio" id="dataDeny" name="consent" value="deny" />
         </div>
       </fieldset>
       <br />
@@ -47,9 +50,10 @@
       <button type="submit">Submit</button>
     </form>
     <script src="script.js"></script>
+    <p><b>DATA PROTECTION NOTICE:</b></p>
     <p>
-      DATA PROTECTION NOTICE: Manifest Fellowship would like to hold and use the
-      information you have provided in this form for the purposes set out below:
+      Manifest Fellowship would like to hold and use the information you have
+      provided in this form for the purposes set out below:
     </p>
     <ol>
       <li>
