hero image html added

--- a/reg.html
+++ b/reg.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manifest Kenya Registration Form</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
-  <body>
+  <body>  
+    <div class="hero-image">
+        <div class="her0-text">
+            <h1>Manifest Fellowship Kenya</h1>
+            <p>Service registration form</p>
+    </div>
+
+    <div class="banner"></div>
+
     <form id="myForm">
       <label for="fullName">Full Name:</label>
       <input type="text" id="fullName" name="fullName" required />
