--- a/reg.html
+++ b/reg.html
@@ -6,11 +6,19 @@
     <title>Manifest Kenya Registration Form</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
-  <body>  
-    <div class="hero-image">
-        <div class="her0-text">
-            <h1>Manifest Fellowship Kenya</h1>
-            <p>Service registration form</p>
+  <body>
+    <section class="hero">
+      <div class="hero-image">
+        <img
+          src="../images/ManifestKenyaHero2.jpg"
+          alt="Manifest Fellowship Kenya hero banner"
+        />
+      </div>
+    </section>
+
+    <div class="hero-text">
+      <h1>Manifest Fellowship Kenya Registration</h1>
+      <p>Welcome to Church today, would you be kind to please register here?</p>
     </div>
 
     <div class="banner"></div>
