--- a/reg.html
+++ b/reg.html
@@ -6,6 +6,17 @@
     <title>Manifest Kenya Registration Form</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
+
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <body>
     <section class="hero">
       <div class="hero-image">
@@ -91,4 +102,6 @@
       </li>
     </ol>
   </body>
+
+  <footer></footer>
 </html>
