logo added to nav bar

--- a/reg.html
+++ b/reg.html
@@ -9,28 +9,43 @@
 
   <header>
     <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+      <div class="logo">
+        <a href="#">
+          <img
+            src="../images/ManifestKenyaLogo.png"
+            alt="Manifest Fellowship Kenya Logo"
+          />
+        </a>
+      </div>
+      <div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
   <body>
-    <section class="hero">
+    <!-- <section class="hero">
       <div class="hero-image">
         <img
           src="../images/ManifestKenyaHero2.jpg"
           alt="Manifest Fellowship Kenya hero banner"
         />
       </div>
-    </section>
+    </section> -->
 
-    <div class="hero-text">
-      <h1>Manifest Fellowship Kenya Registration</h1>
-      <p>Welcome to Church today, would you be kind to please register here?</p>
-    </div>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Manifest Fellowship Kenya Registration</h1>
+        <p>
+          Welcome to today's Phaneroo service livestream, we are glad you are
+          here and trust that you will be blessed and transformed.
+        </p>
+      </div>
+    </section>
 
     <div class="banner"></div>
 
@@ -59,7 +74,7 @@
         />
       </div>
 
-      <h4>Do you grant us consent to use your information?</h4>
+      <h3>Do you grant us consent to use your information?</h3>
       <div class="radio-group">
         <label for="dataAccept">
           <input
