--- a/reg.html
+++ b/reg.html
@@ -107,26 +107,46 @@
       <button type="submit">Submit</button>
     </form>
     <script src="script.js"></script>
-    <p><b>DATA PROTECTION NOTICE:</b></p>
-    <p>
-      Manifest Fellowship would like to hold and use the information you have
-      provided in this form for the purposes set out below:
-    </p>
-    <ol>
-      <li>
-        To keep you informed of events, services and other related communication
-        from the ministry.
-      </li>
-      <li>
-        To share your contact details with our teams for experience sharing with
-        the ministry.
-      </li>
-      <li>
-        To use your photograph(s) and video(s) taken during any of our events on
-        our communication materials.
-      </li>
-    </ol>
+
+    <div class="data-protection">
+      <h3><b>DATA PROTECTION NOTICE:</b></h3>
+      <p>
+        Manifest Fellowship would like to hold and use the information you have
+        provided in this form for the purposes set out below:
+      </p>
+      <ol>
+        <li>
+          To keep you informed of events, services and other related
+          communication from the ministry.
+        </li>
+        <li>
+          To share your contact details with our teams for experience sharing
+          with the ministry.
+        </li>
+        <li>
+          To use your photograph(s) and video(s) taken during any of our events
+          on our communication materials.
+        </li>
+      </ol>
+    </div>
   </body>
 
-  <footer></footer>
+  <footer>
+    <div class="container">
+      <div class="social-media">
+        <a
+          href="https://m.facebook.com/groups/manifestfellowshipkenya"
+          target="_blank"
+          ><i class="fab fa-facebook"></i
+        ></a>
+        <a href="https://twitter.com/manifestkenya" target="_blank"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a href="https://instagram.com/manifest_kenya" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <p>&copy; 2023 Manifest Fellowship Kenya</p>
+      </div>
+    </div>
+  </footer>
 </html>
