--- a/reg.html
+++ b/reg.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
 
-  <header>
-    <nav>
-      <div class="logo">
-        <a href="#">
-          <img
-            src="../images/ManifestKenyaLogo.png"
-            alt="Manifest Fellowship Kenya Logo"
-          />
-        </a>
-      </div>
-      <div>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
   <body>
+    <header>
+      <nav>
+        <div class="logo">
+          <a href="#">
+            <img
+              src="../images/ManifestKenyaLogo.png"
+              alt="Manifest Fellowship Kenya Logo"
+            />
+          </a>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
     <!-- <section class="hero">
       <div class="hero-image">
         <img
@@ -36,117 +36,118 @@
         />
       </div>
     </section> -->
+    <section>
+      <section class="hero">
+        <div class="hero-text">
+          <h1>Manifest Fellowship Kenya Registration</h1>
+          <p>
+            Welcome to today's Phaneroo service livestream, we are glad you are
+            here and trust that you will be blessed and transformed.
+          </p>
+        </div>
+      </section>
 
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Manifest Fellowship Kenya Registration</h1>
+      <div class="banner"></div>
+
+      <form class="reg-form">
+        <div class="form-group">
+          <label for="firstName">First Name:*</label>
+          <input type="text" id="firstName" name="firstName" required />
+        </div>
+
+        <div class="form-group">
+          <label for="lastName">Other Name(s):*</label>
+          <input type="text" id="lastName" name="lastName" required />
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" />
+        </div>
+
+        <div class="form-group">
+          <label for="contactNumber">Contact Number:*</label>
+          <input type="tel" id="contactNumber" name="contactNumber" required />
+        </div>
+
+        <div class="form-group">
+          <label for="homeArea">Place of Residence:*</label>
+          <input type="text" id="homeArea" name="homeArea" required />
+        </div>
+
+        <div class="form-group">
+          <label for="learningInstituition">Institution of Learning:</label>
+          <input
+            type="text"
+            id="learningInstituition"
+            name="learningInstituition"
+          />
+        </div>
+
+        <h3>Do you grant us consent to use your information?*</h3>
+        <div class="radio-group">
+          <label for="dataAccept">
+            <input
+              type="radio"
+              id="dataAccept"
+              name="consent"
+              value="accept"
+              checked
+            />
+            <span class="checkmark"></span>
+            Accept
+          </label>
+
+          <label for="dataDeny">
+            <input type="radio" id="dataDeny" name="consent" value="deny" />
+            <span class="checkmark"></span>
+            Deny
+          </label>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+      <script src="script.js"></script>
+
+      <div class="data-protection">
+        <h3><b>DATA PROTECTION NOTICE:</b></h3>
         <p>
-          Welcome to today's Phaneroo service livestream, we are glad you are
-          here and trust that you will be blessed and transformed.
+          Manifest Fellowship would like to hold and use the information you
+          have provided in this form for the purposes set out below:
         </p>
+        <ol>
+          <li>
+            To keep you informed of events, services and other related
+            communication from the ministry.
+          </li>
+          <li>
+            To share your contact details with our teams for experience sharing
+            with the ministry.
+          </li>
+          <li>
+            To use your photograph(s) and video(s) taken during any of our
+            events on our communication materials.
+          </li>
+        </ol>
       </div>
     </section>
 
-    <div class="banner"></div>
-
-    <form class="reg-form">
-      <div class="form-group">
-        <label for="firstName">First Name:*</label>
-        <input type="text" id="firstName" name="firstName" required />
+    <footer>
+      <div class="container">
+        <div class="social-media">
+          <a
+            href="https://m.facebook.com/groups/manifestfellowshipkenya"
+            target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+          <a href="https://twitter.com/manifestkenya" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a href="https://instagram.com/manifest_kenya" target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <p>&copy; 2023 Manifest Fellowship Kenya</p>
+        </div>
       </div>
-
-      <div class="form-group">
-        <label for="lastName">Other Name(s):*</label>
-        <input type="text" id="lastName" name="lastName" required />
-      </div>
-
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" />
-      </div>
-
-      <div class="form-group">
-        <label for="contactNumber">Contact Number:*</label>
-        <input type="tel" id="contactNumber" name="contactNumber" required />
-      </div>
-
-      <div class="form-group">
-        <label for="homeArea">Place of Residence:*</label>
-        <input type="text" id="homeArea" name="homeArea" required />
-      </div>
-
-      <div class="form-group">
-        <label for="learningInstituition">Institution of Learning:</label>
-        <input
-          type="text"
-          id="learningInstituition"
-          name="learningInstituition"
-        />
-      </div>
-
-      <h3>Do you grant us consent to use your information?*</h3>
-      <div class="radio-group">
-        <label for="dataAccept">
-          <input
-            type="radio"
-            id="dataAccept"
-            name="consent"
-            value="accept"
-            checked
-          />
-          <span class="checkmark"></span>
-          Accept
-        </label>
-
-        <label for="dataDeny">
-          <input type="radio" id="dataDeny" name="consent" value="deny" />
-          <span class="checkmark"></span>
-          Deny
-        </label>
-      </div>
-      <button type="submit">Submit</button>
-    </form>
-    <script src="script.js"></script>
-
-    <div class="data-protection">
-      <h3><b>DATA PROTECTION NOTICE:</b></h3>
-      <p>
-        Manifest Fellowship would like to hold and use the information you have
-        provided in this form for the purposes set out below:
-      </p>
-      <ol>
-        <li>
-          To keep you informed of events, services and other related
-          communication from the ministry.
-        </li>
-        <li>
-          To share your contact details with our teams for experience sharing
-          with the ministry.
-        </li>
-        <li>
-          To use your photograph(s) and video(s) taken during any of our events
-          on our communication materials.
-        </li>
-      </ol>
-    </div>
+    </footer>
   </body>
-
-  <footer>
-    <div class="container">
-      <div class="social-media">
-        <a
-          href="https://m.facebook.com/groups/manifestfellowshipkenya"
-          target="_blank"
-          ><i class="fab fa-facebook"></i
-        ></a>
-        <a href="https://twitter.com/manifestkenya" target="_blank"
-          ><i class="fab fa-twitter"></i
-        ></a>
-        <a href="https://instagram.com/manifest_kenya" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <p>&copy; 2023 Manifest Fellowship Kenya</p>
-      </div>
-    </div>
-  </footer>
 </html>
