footer container modified

--- a/reg.html
+++ b/reg.html
@@ -97,7 +97,7 @@
       <script src="script.js"></script>
 
       <div class="data-protection">
-        <h3><b>DATA PROTECTION NOTICE:</b></h3>
+        <h4><b>DATA PROTECTION NOTICE:</b></h4>
         <p>
           Manifest Fellowship would like to hold and use the information you
           have provided in this form for the purposes set out below:
@@ -120,12 +120,12 @@
     </main>
 
     <footer>
-      <div class="container">
+      <div class="footer-container">
         <div class="social-media">
           <a
             href="https://m.facebook.com/groups/manifestfellowshipkenya"
             target="_blank"
-            ><i class="fab fa-facebook"></i
+            ><i class="fab fa-facebook-f"></i
           ></a>
           <a href="https://twitter.com/manifestkenya" target="_blank"
             ><i class="fab fa-twitter"></i
@@ -133,8 +133,8 @@
           <a href="https://instagram.com/manifest_kenya" target="_blank"
             ><i class="fab fa-instagram"></i
           ></a>
-          <p>&copy; 2023 Manifest Fellowship Kenya</p>
         </div>
+        <p>&copy; 2023 Manifest Fellowship Kenya</p>
       </div>
     </footer>
   </body>
